<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.notebook.idealabs.ddosbandwidththrottlelite.AttackScreen">

    <Button
        android:id="@+id/Attack"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="235dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/button_round"
        android:onClick="startClicked"
        android:text="@string/start_attack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Spinner
        android:id="@+id/Method"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:elevation="5dp"
        android:entries="@array/Methods"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/Attack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingRight="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_timeout"
                android:layout_width="208dp"
                android:layout_height="39dp"
                android:layout_marginBottom="200dp"
                android:layout_weight="1"
                android:text="@string/timeout"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="40dp" />

            <EditText
                android:id="@+id/Timeout"
                android:layout_width="72dp"
                android:layout_height="44dp"
                android:layout_marginBottom="200dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:text="14000"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.501"
                tools:layout_editor_absoluteX="304dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_portno"
                android:layout_width="208dp"
                android:layout_height="39dp"
                android:layout_marginBottom="200dp"
                android:layout_weight="1"
                android:text="@string/port_no"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="40dp" />

            <EditText
                android:id="@+id/Port_No"
                android:layout_width="72dp"
                android:layout_height="44dp"
                android:layout_marginBottom="200dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:text="80"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.501"
                tools:layout_editor_absoluteX="304dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_packetsize"
                android:layout_width="208dp"
                android:layout_height="39dp"
                android:layout_marginBottom="200dp"
                android:layout_weight="1"
                android:text="@string/packet_size"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="40dp" />

            <EditText
                android:id="@+id/Packet_Size"
                android:layout_width="72dp"
                android:layout_height="44dp"
                android:layout_marginBottom="200dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:text="1024"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.501"
                tools:layout_editor_absoluteX="304dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_threads"
                android:layout_width="208dp"
                android:layout_height="39dp"
                android:layout_marginBottom="200dp"
                android:layout_weight="1"
                android:text="@string/simultaneous_attack"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="40dp" />

            <EditText
                android:id="@+id/Thread_Count"
                android:layout_width="72dp"
                android:layout_height="44dp"
                android:layout_marginBottom="200dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:text="3"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.501"
                tools:layout_editor_absoluteX="304dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Attack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/packetpersec"
                android:textAlignment="textEnd"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/pps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text=" "
                android:textColor="@android:color/background_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/packethits"
                android:textAlignment="textEnd"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/ph"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text=" "
                android:textColor="@android:color/background_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/datarate"
                android:textAlignment="textEnd"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/dr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text=" "
                android:textColor="@android:color/background_dark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/Time"
                android:textAlignment="textEnd"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text=" "
                android:textColor="@android:color/background_dark" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
